--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,17 +7,12 @@
         <header>
             <h1><a href="/">Django Genna Boys</a></h1>
         </header>
-
+        {% for post in posts %}
         <article>
-            <time>published: 05/05/2022, 15:16</time>
-            <h2><a href="">My first post</a></h2>
-            <p>Il mio primo post su Django, sono felice di esserci riuscito dopo 2 mesi e mezzo</p>
+            <time>published: {{ post.published_date }}</time>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
         </article>
-
-        <article>
-            <time>published: 05/05/2022, 15:16</time>
-            <h2><a href="">My second post</a></h2>
-            <p>Sono molto contento che dopo 1 anno sono riusco a capire come modificare il blog.</p>
-        </article>
+        {% endfor %}
     </body>
 </html>
